--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-the-website-for-donald-g-gray-it-consultant-and-open-source-developer" class="anchor" href="#welcome-to-the-website-for-donald-g-gray-it-consultant-and-open-source-developer" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the website for Donald G Gray, IT Consultant and Open Source Developer.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
