Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 <h3>
 <a id="songbase-music-production-application" class="anchor" href="#songbase-music-production-application" aria-hidden="true"><span class="octicon octicon-link"></span></a>SongBase music production application</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<p>SongBase is a database application for making music using JFugue MusicStrings.
+<a href="http://songbase.gray10.com/">website</a></p>
 
 <h3>
 <a id="glass-shutters-drawing-application" class="anchor" href="#glass-shutters-drawing-application" aria-hidden="true"><span class="octicon octicon-link"></span></a>Glass Shutters drawing application</h3>
