Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 <h3>
 <a id="songbase-music-production-application" class="anchor" href="#songbase-music-production-application" aria-hidden="true"><span class="octicon octicon-link"></span></a>SongBase music production application</h3>
 
-<p>SongBase is a database application for making music using JFugue MusicStrings.
-<a href="http://songbase.gray10.com/">website</a></p>
+<p>SongBase is a database application for making music using JFugue MusicStrings.  </p>
+
+<p><a href="http://songbase.gray10.com/">website</a></p>
 
 <h3>
 <a id="glass-shutters-drawing-application" class="anchor" href="#glass-shutters-drawing-application" aria-hidden="true"><span class="octicon octicon-link"></span></a>Glass Shutters drawing application</h3>
