Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 <h3>
 <a id="glass-shutters-drawing-application" class="anchor" href="#glass-shutters-drawing-application" aria-hidden="true"><span class="octicon octicon-link"></span></a>Glass Shutters drawing application</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Glass Shutters is an application for creating DraftSight scripts for drawing glass shutters.<br>
+<a href="http://glassshutters.sourceforge.net/">website</a></p>
 
 <h3>
 <a id="bagpipe-play-along" class="anchor" href="#bagpipe-play-along" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bagpipe Play Along</h3>
