Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -31,13 +31,16 @@
 <h3>
 <a id="glass-shutters-drawing-application" class="anchor" href="#glass-shutters-drawing-application" aria-hidden="true"><span class="octicon octicon-link"></span></a>Glass Shutters drawing application</h3>
 
-<p>Glass Shutters is an application for creating DraftSight scripts for drawing glass shutters.<br>
-<a href="http://glassshutters.sourceforge.net/">website</a></p>
+<p>Glass Shutters is an application for creating DraftSight scripts for drawing glass shutters for sash windows.  </p>
+
+<p><a href="http://glassshutters.sourceforge.net/">website</a></p>
 
 <h3>
 <a id="bagpipe-play-along" class="anchor" href="#bagpipe-play-along" aria-hidden="true"><span class="octicon octicon-link"></span></a>Bagpipe Play Along</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Bagpipe Play Along is a website with bagpipe tunes for you to play along to on your practice chanter.  </p>
+
+<p><a href="http://gr9341.wix.com/bagpipe/">website</a></p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
