Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h3>
 <a id="welcome-to-the-website-for-donald-g-gray" class="anchor" href="#welcome-to-the-website-for-donald-g-gray" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the website for Donald G Gray.</h3>
 
-<p>Donald G Gray is an Open Source Developer specializing in database applications, music production, and computer aided drawing.</p>
+<p>Donald G Gray is an Open Source Developer specializing in database applications, music production and computer aided drawing.</p>
 
 <h3>
 <a id="songbase-music-production-application" class="anchor" href="#songbase-music-production-application" aria-hidden="true"><span class="octicon octicon-link"></span></a>SongBase music production application</h3>
