--- a/index.html
+++ b/index.html
@@ -128,6 +128,19 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
                             application for making music using JFugue
                             MusicStrings</em></span></div>
                     </td>
@@ -138,6 +151,19 @@
 href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                         rel="publisher" target="_blank"
                         style="text-decoration:none;display:inline-block;color:#333;text-align:center;
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -235,12 +261,38 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
                           margin-top:8px;">SongBase</span><span
                           style="display:inline-block;vertical-align:top;margin-right:15px;
                           margin-top:8px;"> on</span><img
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -429,6 +481,19 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                                           class="nounderline"
                                           target="_blank"
 href="https://drive.google.com/file/d/0B6s7db9SsZhVOGlpZFo2VDgzRlk/view?usp=sharing">view
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -667,6 +732,19 @@ myAudioitem.pause();
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
                           Select "Song" and press Play to play back your
                           music.&nbsp; From the <em>File</em> menu, you
                           can export to MIDI, MusicXML or WAV for music
@@ -722,9 +800,14 @@ href="https://bintray.com/artifact/download/songbuilder/generic/songbase_3.0.1_a
                               border="0" width="1" height="1"> </form>-->
                           </div>
                           <br>
-                          You can collaborate with your colleagues on a
-                          song by using a MySQL shared database.&nbsp;
-                          You can also export and import songs in XML
+                          <img style=" width: 250px; height: 250px;
+                            border-left: 30px solid white; border-top:
+                            6px solid white; border-bottom: 12px solid
+                            white;" alt="Connection form"
+                            src="image/Connection.png" align="right">You
+                          can collaborate with your colleagues on a song
+                          by using a MySQL shared database.&nbsp; You
+                          can also export and import songs in XML
                           format.&nbsp; Use <span style="font-style:
                             italic;">File/XML Import</span> to import
                           the demonstration songs.<br>
@@ -778,25 +861,38 @@ href="https://bintray.com/artifact/download/songbuilder/generic/songbase_3.0.1_a
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
                             Connections</span> form to enter the
                           connection parameters obtained from your
                           Database as a Service provider.&nbsp; Then use
                           <span style="font-style: italic;">File/Create
                             Tables</span> to create the database tables
-                          on the remote host.&nbsp; We recommend that
-                          you create a user in your MySQL database
-                          called 'guest' with <span style="font-style:
-                            italic;">EXECUTE</span> as the only
-                          privilege.&nbsp; Connecting as 'guest' enables
-                          read access to all songs and also the ability
-                          to create and log in to individual user
-                          accounts for the creation of songs.&nbsp; Full
-                          access to these songs can optionally be shared
-                          with selected other user accounts.<br>
-                        </span></div>
-                    </blockquote>
-                    <div class="centre">
-                      <blockquote>
+                          on the remote host.<br>
+                          <br>
+                          We recommend that you create a user in your
+                          MySQL database called 'guest' with <span
+                            style="font-style: italic;">EXECUTE</span>
+                          as the only privilege.&nbsp; Connecting as
+                          'guest' enables read access to all songs and
+                          also the ability to create and log in to
+                          individual user accounts for the creation of
+                          songs.&nbsp; Full access to these songs can
+                          optionally be shared with selected other user
+                          accounts.<br>
+                          <br>
+                        </span>
                         <div class="left"><span class="body">Before
                             running <strong>SongBase</strong> on
                             Microsoft Windows you will first need to
@@ -851,12 +947,25 @@ href="https://bintray.com/artifact/download/songbuilder/generic/songbase_3.0.1_a
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
                             latest version of OpenJDK Java Runtime from
                             the Ubuntu Software Center.&nbsp; For best
                             results on Linux Ubuntu, we recommend using
                             the Gnome Desktop Environment.</span></div>
-                      </blockquote>
-                    </div>
+                      </div>
+                    </blockquote>
                     <span class="body"><em><br>
                         <br>
                       </em></span>
