--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
 
 
 
+
+
                             application for making music using JFugue
                             MusicStrings</em></span></div>
                     </td>
@@ -155,6 +157,8 @@
 href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                         rel="publisher" target="_blank"
                         style="text-decoration:none;display:inline-block;color:#333;text-align:center;
+
+
 
 
 
@@ -286,12 +290,16 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                           margin-top:8px;">SongBase</span><span
                           style="display:inline-block;vertical-align:top;margin-right:15px;
                           margin-top:8px;"> on</span><img
                           src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                           alt="Google+"
                           style="border:0;width:32px;height:32px;"></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -497,6 +505,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                                           class="nounderline"
                                           target="_blank"
 href="https://drive.google.com/file/d/0B6s7db9SsZhVOGlpZFo2VDgzRlk/view?usp=sharing">view
+
+
 
 
 
@@ -769,6 +779,8 @@ myAudioitem.pause();
 
 
 
+
+
                           Select "Song" and press Play to play back your
                           music.&nbsp; From the <em>File</em> menu, you
                           can export to MIDI, MusicXML or WAV for music
@@ -902,6 +914,8 @@ href="https://bintray.com/artifact/download/songbuilder/generic/songbase_3.0.3_a
 
 
 
+
+
                             Connections</span> form to enter the
                           connection parameters obtained from your
                           Database as a Service provider.&nbsp; Then use
@@ -921,13 +935,25 @@ href="https://bintray.com/artifact/download/songbuilder/generic/songbase_3.0.3_a
                           accounts.<br>
                           <br>
                         </span>
-                        <div class="left"><span class="body">Before
-                            running <strong>SongBase</strong> on
+                        <div class="left"><span class="body">You are
+                            welcome to connect to the above database if
+                            you would like to publish your songs.&nbsp;
+                            Just make sure you comply with GoDaddy's <span
+                              style="font-weight: bold;"><span
+                                style="font-style: italic;"><a
+                                  href="https://uk.godaddy.com/legal-agreements.aspx?ci=&amp;otab=2"
+                                  class="nounderline" target="_blank">Universal
+
+                                  Terms of Service Agreement</a></span></span>.<br>
+                            <br>
+                            Before running <strong>SongBase</strong> on
                             Microsoft Windows you will first need to
                             install the latest version of Java from <a
                               href="http://java.com/"
                               class="nounderline" target="_blank"><em><strong>Java.com</strong></em></a>
                             or, if you are using Linux Ubuntu,<strong> </strong>the
+
+
 
 
 
