--- a/demonstration.html
+++ b/demonstration.html
@@ -49,12 +49,11 @@
 </style>
   </head>
   <body>
-    <table style=" width: 980px; text-align: left; margin-left: auto;
-      margin-right: auto;" border="0" cellpadding="0" cellspacing="0">
+    <table border="0" cellpadding="0" cellspacing="0" width="980"
+      align="center">
       <tbody>
         <tr>
-          <td class="heading" style="text-align: center; vertical-align:
-            top;">
+          <td class="heading" valign="top" align="center">
             <div>
               <table style=" width: 100%;" border="0" cellpadding="4"
                 cellspacing="0">
@@ -82,6 +81,9 @@
                       <div class="centre"><span class="header">SongBase</span><br>
                       </div>
                       <div class="subheader"><span class="subheader"><em>database
+
+
+
 
 
 
@@ -244,9 +246,15 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
+
 
 
 
@@ -405,6 +413,9 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
+
                       <a href="https://github.com/SongBase/SongBase"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
@@ -422,37 +433,18 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
           <td style=" vertical-align: middle; text-align: center;
             height: 80px;"><a href="index.html"
               style="text-decoration:none;"><button type="button"
-                style="background-color:#eeeeee; border-color: #551A8B;
-                padding:5px; cursor:pointer"><font color="#551A8B"
-                  face="Verdana"><big><b>Home</b></big></font></button></a>&nbsp;&nbsp;
-
-
-
-
-
-
-
+                style="background-color:#eeeeee; padding:5px;
+                cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Home</b></big></font></button></a>&nbsp;&nbsp;
 
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
 
-
-
-
-
-
-
-
             <a href="demonstration.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
-                padding:5px; cursor:pointer"><font color="#551A8B"
-                  face="Verdana"><big><b>Demonstration</b></big></font></button></a>&nbsp;&nbsp;
-
-
-
-
+                border-color: #551A8B; padding:5px; cursor:pointer"><font
+                  color="#551A8B" face="Verdana"><big><b>Demonstration</b></big></font></button></a>&nbsp;&nbsp;
 
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
@@ -460,22 +452,15 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                   face="Verdana"><big><b>Sharing</b></big></font></button></a>&nbsp;&nbsp;
 
 
-
-
-
-
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
 
-
-
-
                       Us</b></big></font></button></a> </td>
         </tr>
         <tr>
-          <td class="background" style="vertical-align: top;">
+          <td class="background" valign="top">
             <table border="0" cellpadding="0" cellspacing="0"
               width="100%">
               <tbody>
@@ -552,171 +537,120 @@ myAudioitem.pause();
 }
 
 </script> <span class="body"></span>
-                    <blockquote><span class="body"><strong></strong>Make
-                        music on your Microsoft Windows or Linux laptop
-                        or PC with <span style="font-weight: bold;">SongBase</span>.&nbsp;
+                    <blockquote><span class="body">
+                        <div style="text-align:center;"> <iframe
+                            src="https://www.youtube-nocookie.com/embed/z7dZ_Q0uc_I?rel=0"
+                            allowfullscreen="" width="640"
+                            align="middle" height="480"></iframe> </div>
+                      </span><br clear="all">
+                      <div class="left">&nbsp; <span class="body"><br>
+                          Within the application, use <em>File/Template</em>
+                          to create a song, then <em>File/Tree View</em>
+                          and expand the nodes.&nbsp; Select each bar in
+                          turn and enter the notes<strong><em></em></strong>.&nbsp;
 
 
-                        Songs can have up to 15 instrumental voices and
-                        a percussion track with instruments chosen from
-                        a soundbank of 128 instruments.&nbsp; Either the
-                        default soundbank or one of your own can be
-                        used.&nbsp; Songs can be developed, tested and
-                        edited very quickly and easily by virtue of the
-                        database structure and the JFugue MusicString
-                        notation.<br>
-                        <br>
-                        Notes are specified by their name and octave or
-                        by their MIDI value and their durations are
-                        specified either by character code, or
-                        numerically.&nbsp; You can use notes from C0 to
-                        G10, corresponding to MIDI values 0 to
-                        127.&nbsp; Middle C is C5.<br>
-                      </span><br>
-                      <div class="left"><span class="body"> Please see
-                          the <strong><em><a
-                                href="doc/SongBaseDocumentation-3-0-0.pdf"
-                                class="nounderline" target="_blank">Documentation</a></em></strong>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                          Select "Song" and press Play to play back your
+                          music.&nbsp; From the <em>File</em> menu, you
+                          can export to MIDI, MusicXML or WAV for music
+                          processing or publishing.&nbsp; The WAV files
+                          can be opened in <a class="nounderline"
+                            target="_blank"
+                            href="http://audacity.sourceforge.net/"><span
+                              style="font-style: italic;"><span
+                                style="font-weight: bold;">Audacity</span></span></a>,
+                          then exported to MP3.&nbsp; Please see the <strong><em><a
+href="doc/SongBaseDocumentation-3-0-0.pdf" class="nounderline"
+                                target="_blank">Documentation</a></em></strong>
                           for more details.<br>
                           <br style="clear:right;">
                           <br>
-                          <div style="text-align: center; ">
-                            <!--<form style="text-align: center;"
-                            action="https://www.paypal.com/cgi-bin/webscr"
-                            method="post" target="_top"> --><span
-                              class="fullsize"><em>Download SongBase
-                                3.0.3</em> &nbsp;</span> <a
-href="https://bintray.com/artifact/download/songbuilder/generic/installSongBase-3-0-3.msi"><img
-                                alt="Windows" src="image/Windows.png"
-                                style="border: 0px solid; border: 0px
-                                solid; width: 108px; height: 34px;
-                                margin-bottom: 12px;" align="middle"></a>
-                            <a
-href="https://bintray.com/artifact/download/songbuilder/generic/songbase_3.0.3_i386.deb"><img
-                                alt="Linux (32-bit)"
-                                src="image/Linux%2832-bit%29.png"
-                                style="border: 0px solid; border: 0px
-                                solid; width: 142px; height: 34px;
-                                margin-bottom: 12px;" align="middle"></a>
-                            <a
-href="https://bintray.com/artifact/download/songbuilder/generic/songbase_3.0.3_amd64.deb"><img
-                                alt="Linux (64-bit)"
-                                src="image/Linux%2864-bit%29.png"
-                                style="border: 0px solid; border: 0px
-                                solid; width: 142px; height: 34px;
-                                margin-bottom: 12px;" align="middle"></a>
-                            <!--<input name="cmd" value="_s-xclick"
-                              type="hidden"> <input
-                              name="hosted_button_id"
-                              value="RSU3TXL8H9BZ4" type="hidden"> <input
-                              src="image/Donate.png" name="submit"
-                              alt="PayPal – The safer, easier way to
-                              pay online." style="border: 0px solid;
-                              border: 0px solid; width: 93px; height:
-                              34px; margin-bottom: 12px;" type="image"
-                              align="middle"> <img alt=""
-                              src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif"
-                              border="0" width="1" height="1"> </form>-->
-                          </div>
-                        </span><br>
-                        <div class="left"><span class="body"> Before
-                            running <strong>SongBase</strong> on
-                            Microsoft Windows you will first need to
-                            install the latest version of Java from <a
-                              href="http://java.com/"
-                              class="nounderline" target="_blank"><em><strong>Java.com</strong></em></a>
-                            or, if you are using Linux Ubuntu,<strong> </strong>the
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                            latest version of OpenJDK Java Runtime from
-                            the Ubuntu Software Center.&nbsp; For best
-                            results on Linux Ubuntu, we recommend using
-                            the Gnome Desktop Environment.</span></div>
-                      </div>
+                        </span></div>
                     </blockquote>
-                    <span class="body"><em><br>
-                        <br>
-                      </em></span>
+                    <span class="body"><em> </em></span>
                     <div style="text-align: center;"><span class="body"><em>
                           Copyright © 2015&nbsp; Donald G Gray</em><span
                           style="font-style: italic;"></span><span
                           style="font-style: italic;"></span></span><br>
                       <span class="body"></span></div>
-                    <span class="body"> </span> </td>
+                    <span class="body"> </span></td>
                 </tr>
               </tbody>
             </table>
