--- a/examples.html
+++ b/examples.html
@@ -147,6 +147,8 @@
 
 
 
+
+
                             application for making music using JFugue
                             MusicStrings</em></span></div>
                     </td>
@@ -223,9 +225,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
 
 
 
@@ -364,6 +370,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                       <a href="https://github.com/SongBase/SongBase"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
@@ -378,19 +386,29 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
           </td>
         </tr>
         <tr>
-          <td>
-            <blockquote>
-              <hr style="clear: both; color: #888888; background-color:
-                #888888; height: 1px; border-width: 0;">
-              <div style="text-align: center;"><span class="invite">Here
-                  are some popular classics produced with <span
-                    style="font-weight: bold;">SongBase</span>.&nbsp;
-                  Click on the song to play or pause.</span><br>
-              </div>
-              <hr style="clear: both; color: #888888; background-color:
-                #888888; height: 1px; border-width: 0;"> </blockquote>
-            <br>
-          </td>
+          <td style=" vertical-align: middle; text-align: center;
+            height: 80px;"><a href="index.html"
+              style="text-decoration:none;"><button type="button"
+                style="background-color:#eeeeee; padding:5px;
+                cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Home</b></big></font></button></a>&nbsp;&nbsp;
+            <a href="examples.html" style="text-decoration:none;"><button
+                type="button" style="background-color:#eeeeee;
+                border-color: #551A8B;
+                padding:5px; cursor:pointer"><font color="#551A8B"
+                  face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+            <a href="demonstration.html" style="text-decoration:none;"><button
+                type="button" style="background-color:#eeeeee;
+                padding:5px; cursor:pointer"><font color="#551A8B"
+                  face="Verdana"><big><b>Demonstration</b></big></font></button></a>&nbsp;&nbsp;
+            <a href="sharing.html" style="text-decoration:none;"><button
+                type="button" style="background-color:#eeeeee;
+                padding:5px; cursor:pointer"><font color="#551A8B"
+                  face="Verdana"><big><b>Sharing</b></big></font></button></a>&nbsp;&nbsp;
+            <a href="mailto:info@gray10.com"
+              style="text-decoration:none;"><button type="button"
+                style="background-color:#eeeeee; padding:5px;
+                cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+                      Us</b></big></font></button></a> </td>
         </tr>
         <tr>
           <td class="background" valign="top">
@@ -403,7 +421,21 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                       cellpadding="0" cellspacing="0">
                       <tbody>
                         <tr>
-                          <td style="vertical-align: top;">
+                          <td style="vertical-align: top;"><br>
+                          </td>
+                          <td style="vertical-align: top;"><br>
+                          </td>
+                          <td style="vertical-align: top;"><br>
+                          </td>
+                          <td style="vertical-align: top;"><br>
+                          </td>
+                          <td style="vertical-align: top;"><br>
+                          </td>
+                          <td style="vertical-align: top;"><br>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td style=" vertical-align: top;">
                             <table border="0" cellpadding="4"
                               cellspacing="0" width="100%">
                               <tbody>
@@ -571,6 +603,8 @@ href="https://drive.google.com/file/d/0B6s7db9SsZhVOGlpZFo2VDgzRlk/view?usp=shar
 
 
 
+
+
                                           XML</a>)</em></span> </td>
                                 </tr>
                               </tbody>
@@ -668,374 +702,32 @@ myAudioitem.pause();
 
 </script> <span class="body"><br>
                     </span>
-                    <blockquote><span class="body"><strong>SongBase</strong>
-                        is an Open Source software application for
-                        making music on your Microsoft Windows or Linux
-                        laptop or PC.&nbsp; Songs can have up to 15
-                        instrumental voices and a percussion track with
-                        instruments chosen from a soundbank of 128
-                        instruments.&nbsp; Either the default soundbank
-                        or one of your own can be used.&nbsp; Songs can
-                        be developed, tested and edited very quickly and
-                        easily by virtue of the database structure and
-                        the JFugue MusicString notation.<br>
+                    <blockquote><span class="body"><strong></strong></span><span
+                        class="body">Most of the songs here were
+                        produced using the GM.DLS Roland SoundCanvas
+                        Sound Set which normally comes bundled with
+                        Microsoft Windows but not with Linux. &nbsp;Due
+                        to licensing reasons we are unable to include
+                        GM.DLS with the Linux versions of <span
+                          style="font-weight: bold;">SongBase</span>.<br>
                         <br>
-                        <br>
-                        <iframe
-                          src="https://www.youtube-nocookie.com/embed/z7dZ_Q0uc_I?rel=0"
-                          allowfullscreen="" style=" border-right: 30px
-                          solid white; border-top-width: 0;
-                          border-bottom-width: 0; border-left-width: 0;"
-                          width="420" align="left" height="315"></iframe>
-                        Notes are specified by their name and octave or
-                        by their MIDI value and their durations are
-                        specified either by character code, or
-                        numerically.<br>
-                        <br>
-                        You can use notes from C0 to G10, corresponding
-                        to MIDI values 0 to 127.&nbsp; Middle C is C5.<br>
-                        <br>
-                        Sharps, flats and naturals are placed
-                        immediately after the note letter so B-flat
-                        above middle C is written as Bb5.<br>
-                        <br>
-                        Notes can be entered manually or by picking from
-                        graphic Treble, Alto, Tenor and Bass staves
-                        within the MusicString editor.<br>
-                        <br>
-                        Please see the <span style="font-style:
-                          italic;"><span style="font-weight: bold;"><a
-                              href="doc/MusicStringDocumentation.pdf"
-                              class="nounderline" target="_blank">JFugue
-                              MusicString</a></span></span> notation for
-                        more information. </span> <br clear="all">
-                      <div class="left"><span class="body"> <br>
-                          <br>
-                          Within the application, use <em>File/Template</em>
-                          to create a song, then <em>File/Tree View</em>
-                          and expand the nodes.&nbsp; Select each bar in
-                          turn and enter the notes<strong><em></em></strong>.&nbsp;
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                          Select "Song" and press Play to play back your
-                          music.&nbsp; From the <em>File</em> menu, you
-                          can export to MIDI, MusicXML or WAV for music
-                          processing or publishing.&nbsp; The WAV files
-                          can be opened in <a class="nounderline"
-                            target="_blank"
-                            href="http://audacity.sourceforge.net/"><span
-                              style="font-style: italic;"><span
-                                style="font-weight: bold;">Audacity</span></span></a>,
-                          then exported to MP3.&nbsp; Please see the <strong><em><a
-href="doc/SongBaseDocumentation-3-0-0.pdf" class="nounderline"
-                                target="_blank">Documentation</a></em></strong>
-                          for more details.<br>
-                          <br style="clear:right;">
-                          <br>
-                          <div style="text-align: left; text-indent:
-                            50px;">
-                            <!--<form style="text-align: center;"
-                            action="https://www.paypal.com/cgi-bin/webscr"
-                            method="post" target="_top"> --><span
-                              class="fullsize"><em>Download SongBase
-                                3.0.3</em> &nbsp;</span> <a
-href="https://bintray.com/artifact/download/songbuilder/generic/installSongBase-3-0-3.msi"><img
-                                alt="Windows" src="image/Windows.png"
-                                style="border: 0px solid; border: 0px
-                                solid; width: 108px; height: 34px;
-                                margin-bottom: 12px;" align="middle"></a>
-                            <a
-href="https://bintray.com/artifact/download/songbuilder/generic/songbase_3.0.3_i386.deb"><img
-                                alt="Linux (32-bit)"
-                                src="image/Linux%2832-bit%29.png"
-                                style="border: 0px solid; border: 0px
-                                solid; width: 142px; height: 34px;
-                                margin-bottom: 12px;" align="middle"></a>
-                            <a
-href="https://bintray.com/artifact/download/songbuilder/generic/songbase_3.0.3_amd64.deb"><img
-                                alt="Linux (64-bit)"
-                                src="image/Linux%2864-bit%29.png"
-                                style="border: 0px solid; border: 0px
-                                solid; width: 142px; height: 34px;
-                                margin-bottom: 12px;" align="middle"></a>
-                            <!--<input name="cmd" value="_s-xclick"
-                              type="hidden"> <input
-                              name="hosted_button_id"
-                              value="RSU3TXL8H9BZ4" type="hidden"> <input
-                              src="image/Donate.png" name="submit"
-                              alt="PayPal – The safer, easier way to
-                              pay online." style="border: 0px solid;
-                              border: 0px solid; width: 93px; height:
-                              34px; margin-bottom: 12px;" type="image"
-                              align="middle"> <img alt=""
-                              src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif"
-                              border="0" width="1" height="1"> </form>-->
-                          </div>
-                          <br>
-                          <img style=" width: 250px; height: 250px;
-                            border-left: 30px solid white; border-top:
-                            6px solid white; border-bottom: 12px solid
-                            white;" alt="Connection form"
-                            src="image/Connection.png" align="right">You
-                          can collaborate with your colleagues on a song
-                          by using a MySQL shared database.&nbsp; You
-                          can also export and import songs in XML
-                          format.&nbsp; Use <span style="font-style:
-                            italic;">File/XML Import</span> to import
-                          the demonstration songs.<br>
-                          <br>
-                          If you are setting up a shared database, use
-                          the <span style="font-style: italic;">Database/Database
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                            Connections</span> form to enter the
-                          connection parameters obtained from your
-                          Database as a Service provider.&nbsp; Then use
-                          <span style="font-style: italic;">File/Create
-                            Tables</span> to create the database tables
-                          on the remote host.<br>
-                          <br>
-                          We recommend that you create a user in your
-                          MySQL database called 'guest' with <span
-                            style="font-style: italic;">EXECUTE</span>
-                          as the only privilege.&nbsp; Connecting as
-                          'guest' enables read access to all songs and
-                          also the ability to create and log in to
-                          individual user accounts for the creation of
-                          songs.&nbsp; Full access to these songs can
-                          optionally be shared with selected other user
-                          accounts.<br>
-                          <br>
-                        </span>
-                        <div class="left"><span class="body">You are
-                            welcome to connect to the above database if
-                            you would like to publish your songs.&nbsp;
-                            Just make sure you comply with GoDaddy's <span
-                              style="font-weight: bold;"><span
-                                style="font-style: italic;"><a
-                                  href="https://uk.godaddy.com/legal-agreements.aspx?ci=&amp;otab=2"
-                                  class="nounderline" target="_blank">Universal
-
-                                  Terms of Service Agreement</a></span></span>.<br>
-                            <br>
-                            Before running <strong>SongBase</strong> on
-                            Microsoft Windows you will first need to
-                            install the latest version of Java from <a
-                              href="http://java.com/"
-                              class="nounderline" target="_blank"><em><strong>Java.com</strong></em></a>
-                            or, if you are using Linux Ubuntu,<strong> </strong>the
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-                            latest version of OpenJDK Java Runtime from
-                            the Ubuntu Software Center.&nbsp; For best
-                            results on Linux Ubuntu, we recommend using
-                            the Gnome Desktop Environment.</span></div>
-                      </div>
-                    </blockquote>
+                      </span><span class="body">Handel's Messiah No 1
+                        Sinfony was produced using the SGM-V2.01.sf2
+                        soundfont. &nbsp;The oboe and cello parts were
+                        cloned from the violin 1 and basso continuo bass
+                        parts respectively.&nbsp; The MIDI file from <span
+                          style="font-weight: bold;">SongBase</span> was
+                        imported into SynthFont and Played to File (MP3)
+                        at 320 kbs.</span></blockquote>
                     <span class="body"><em><br>
                         <br>
                       </em></span>
                     <div style="text-align: center;"><span class="body"><em>
-                          Copyright © 2014, 2015&nbsp; Donald G
-                          Gray&nbsp; </em><span style="font-style:
-                          italic;"> </span><span style="font-style:
-                          italic;"><a href="mailto:info@gray10.com"
-                            class="nounderline">info@gray10.com</a></span></span><br>
+                          Copyright © 2015&nbsp; Donald G Gray</em><span
+                          style="font-style: italic;"></span><span
+                          style="font-style: italic;"></span></span><br>
                       <span class="body"></span></div>
-                    <span class="body"> <br>
-                    </span> </td>
+                    <span class="body"> </span> </td>
                 </tr>
               </tbody>
             </table>
