update demonstration video

--- a/demonstration.html
+++ b/demonstration.html
@@ -160,6 +160,8 @@
 
 
 
+
+
                             application for making music using JFugue
                             MusicStrings</em></span></div>
                     </td>
@@ -249,9 +251,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
 
 
 
@@ -416,6 +422,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                       <a href="https://github.com/SongBase/SongBase"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
@@ -436,15 +444,21 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Home</b></big></font></button></a>&nbsp;&nbsp;
 
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
 
+
+
             <a href="demonstration.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 border-color: #551A8B; padding:5px; cursor:pointer"><font
                   color="#551A8B" face="Verdana"><big><b>Demonstration</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
@@ -452,10 +466,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                   face="Verdana"><big><b>Sharing</b></big></font></button></a>&nbsp;&nbsp;
 
 
+
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
+
 
                       Us</b></big></font></button></a> </td>
         </tr>
@@ -538,16 +556,25 @@ myAudioitem.pause();
 
 </script> <span class="body"></span>
                     <blockquote><span class="body">
-                        <div style="text-align:center;"> <iframe
+                        <div style="text-align:center;">
+                          <!-- <iframe
                             src="https://www.youtube-nocookie.com/embed/z7dZ_Q0uc_I?rel=0"
                             allowfullscreen="" width="640"
-                            align="middle" height="480"></iframe> </div>
+                            align="middle" height="480"></iframe> -->
+                          <iframe
+src="https://player.vimeo.com/video/123503762?title=0&amp;byline=0&amp;portrait=0"
+                            webkitallowfullscreen=""
+                            mozallowfullscreen="" allowfullscreen=""
+                            width="640" frameborder="0" height="480"></iframe>
+                        </div>
                       </span><br clear="all">
                       <div class="left">&nbsp; <span class="body"><br>
                           Within the application, use <em>File/Template</em>
                           to create a song, then <em>File/Tree View</em>
                           and expand the nodes.&nbsp; Select each bar in
                           turn and enter the notes<strong><em></em></strong>.&nbsp;
+
+
 
 
 
