--- a/demonstration.html
+++ b/demonstration.html
@@ -9,7 +9,8 @@
       making music with up to 15 instrumental voices and a percussion
       track." name="description">
     <meta property="og:image" content="image/SongBaseWebsite.png">
-    <script type="text/javascript">
+    <!--    
+<script type="text/javascript">
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -19,6 +20,7 @@
       'clientId': '35009a79-1a05-49d7-b876-2b884d0f825b'});
       ga('send', 'pageview');
     </script>
+-->
     <style type="text/css">
 
       body {background-color: #FFFFFF; color: #000000;}
@@ -81,6 +83,8 @@
                       <div class="centre"><span class="header">SongBase</span><br>
                       </div>
                       <div class="subheader"><span class="subheader"><em>database
+
+
 
 
 
@@ -253,9 +257,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
 
 
 
@@ -424,6 +432,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                       <a href="https://github.com/SongBase/SongBase"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
@@ -446,6 +456,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
@@ -453,10 +465,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="demonstration.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 border-color: #551A8B; padding:5px; cursor:pointer"><font
                   color="#551A8B" face="Verdana"><big><b>Demonstration</b></big></font></button></a>&nbsp;&nbsp;
+
+
 
 
 
@@ -468,10 +484,14 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
+
 
 
 
@@ -560,8 +580,7 @@ myAudioitem.pause();
                           <!-- <iframe
                             src="https://www.youtube-nocookie.com/embed/z7dZ_Q0uc_I?rel=0"
                             allowfullscreen="" width="640"
-                            align="middle" height="480"></iframe> -->
-                          <iframe
+                            align="middle" height="480"></iframe> --> <iframe
 src="https://player.vimeo.com/video/123503762?title=0&amp;byline=0&amp;portrait=0"
                             webkitallowfullscreen=""
                             mozallowfullscreen="" allowfullscreen=""
@@ -573,6 +592,8 @@ src="https://player.vimeo.com/video/123503762?title=0&amp;byline=0&amp;portrait=
                           to create a song, then <em>File/Tree View</em>
                           and expand the nodes.&nbsp; Select each bar in
                           turn and enter the notes<strong><em></em></strong>.&nbsp;
+
+
 
 
 
