--- a/examples.html
+++ b/examples.html
@@ -9,6 +9,7 @@
       making music with up to 15 instrumental voices and a percussion
       track." name="description">
     <meta property="og:image" content="image/SongBaseWebsite.png">
+    <!--
     <script type="text/javascript">
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -19,6 +20,7 @@
       'clientId': '35009a79-1a05-49d7-b876-2b884d0f825b'});
       ga('send', 'pageview');
     </script>
+-->
     <style type="text/css">
 
       body {background-color: #FFFFFF; color: #000000;}
@@ -81,6 +83,8 @@
                       <div class="centre"><span class="header">SongBase</span><br>
                       </div>
                       <div class="subheader"><span class="subheader"><em>database
+
+
 
 
 
@@ -227,9 +231,13 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
+
 
 
 
@@ -372,6 +380,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
+
                       <a href="https://github.com/SongBase/SongBase"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
@@ -391,23 +401,32 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Home</b></big></font></button></a>&nbsp;&nbsp;
+
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
-                border-color: #551A8B;
-                padding:5px; cursor:pointer"><font color="#551A8B"
-                  face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+                border-color: #551A8B; padding:5px; cursor:pointer"><font
+                  color="#551A8B" face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
+
             <a href="demonstration.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Demonstration</b></big></font></button></a>&nbsp;&nbsp;
+
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Sharing</b></big></font></button></a>&nbsp;&nbsp;
+
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
+
                       Us</b></big></font></button></a> </td>
         </tr>
         <tr>
@@ -537,6 +556,8 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
                                           class="nounderline"
                                           target="_blank"
 href="https://drive.google.com/file/d/0B6s7db9SsZhVOGlpZFo2VDgzRlk/view?usp=sharing">view
+
+
 
 
 
