--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
 
 
 
+
                             application for making music using JFugue
                             MusicStrings</em></span></div>
                     </td>
@@ -258,9 +259,11 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
 
 
 
@@ -431,6 +434,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                       <a href="https://github.com/SongBase/SongBase"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
@@ -465,10 +469,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
 
 
 
@@ -498,6 +504,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
@@ -514,10 +521,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
 
 
 
@@ -611,6 +620,7 @@ myAudioitem.pause();
                     <blockquote><span class="body"><strong></strong>Make
                         music on your Microsoft Windows or Linux laptop
                         or PC with <span style="font-weight: bold;">SongBase</span>.&nbsp;
+
 
 
 
@@ -770,10 +780,16 @@ href="https://bintray.com/artifact/download/songbuilder/generic/songbase_3.0.4_a
 
 
 
+
                             latest version of OpenJDK Java Runtime from
                             the Ubuntu Software Center.&nbsp; For best
                             results on Linux Ubuntu, we recommend using
-                            the Gnome Desktop Environment.</span></div>
+                            the Gnome Desktop Environment.<br>
+                            <br>
+                            Top downloads this month:<img style=" width:
+                              50px; height: 33px;" alt="China"
+                              src="image/80px-Flag_of_the_People%27s_Republic_of_China.svg.png"
+                              align="top" hspace="10"></span></div>
                       </div>
                     </blockquote>
                     <span class="body"><em><br>
