--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
 
 
 
+
                             application for making music using JFugue
                             MusicStrings</em></span></div>
                     </td>
@@ -260,9 +261,11 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                         font:13px/16px
                         arial,sans-serif;white-space:nowrap;"> <span
                           style="display:inline-block;font-weight:bold;vertical-align:top;margin-right:5px;
+
 
 
 
@@ -435,6 +438,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
                       <a href="https://github.com/SongBase/SongBase"
                         target="_blank"><img
                           src="image/GitHub-Mark-32px.png" alt="GitHub"
@@ -470,10 +474,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="examples.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
                   face="Verdana"><big><b>Examples</b></big></font></button></a>&nbsp;&nbsp;
+
 
 
 
@@ -505,6 +511,7 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="sharing.html" style="text-decoration:none;"><button
                 type="button" style="background-color:#eeeeee;
                 padding:5px; cursor:pointer"><font color="#551A8B"
@@ -522,10 +529,12 @@ href="https://plus.google.com/u/0/communities/115182680696167827789?prsrc=3"
 
 
 
+
             <a href="mailto:info@gray10.com"
               style="text-decoration:none;"><button type="button"
                 style="background-color:#eeeeee; padding:5px;
                 cursor:pointer"><font color="#551A8B" face="Verdana"><big><b>Contact
+
 
 
 
@@ -620,6 +629,7 @@ myAudioitem.pause();
                     <blockquote><span class="body"><strong></strong>Make
                         music on your Microsoft Windows or Linux laptop
                         or PC with <span style="font-weight: bold;">SongBase</span>.&nbsp;
+
 
 
 
@@ -781,13 +791,15 @@ href="https://bintray.com/artifact/download/songbuilder/generic/songbase_3.0.4_a
 
 
 
+
                             latest version of OpenJDK Java Runtime from
                             the Ubuntu Software Center.&nbsp; For best
                             results on Linux Ubuntu, we recommend using
                             the Gnome Desktop Environment.<br>
                             <br>
-                            Top downloads this month:<img style=" width:
-                              50px; height: 33px;" alt="China"
+                            Top download destination this month:<img
+                              style=" width: 50px; height: 33px;"
+                              alt="China"
                               src="image/80px-Flag_of_the_People%27s_Republic_of_China.svg.png"
                               align="top" hspace="10"></span></div>
                       </div>
